classDiagram

    direction TB

    class Solver {
        <<Abstract>>
    }

    class EulerExplicitSolver {

    }

    class EulerExplicitLoopSolver {
        AlgebraicLoopErrorThreshold : double
        AlgebraicLoopIterationCountLimit : int
        AlgebraicLoopLearningRate : double

        InputGuessMasterFlags : Dictionary~Block, bool[]~
        InputGuessSlaveFlags : Dictionary~Block, bool[]~
        InputGuessValues : Dictionary~Block, double[]~

        ResetInputReadyFlags() void
        CalculateOutputs(time : double) void
        ForwardOutputs(block : Block) void
        HasInputGuess(block : Block) bool
        ComputeInputGuessMasterError() double
    }

    Solver <|-- EulerExplicitSolver
    EulerExplicitSolver <|-- EulerExplicitLoopSolver

    style Solver fill:white
    style EulerExplicitSolver fill:white